# paperlens

./: .gitignore  PLAN.md  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  wxt.config.ts
docs/: architecture.md  dev-notes.md  issues-log.md  plan-arxiv-tex-source-formulas.md  plan-mineru-thin-integration.md  plan-pdf-extraction.md
entrypoints/: background.ts  content.ts
services/mineru/: README.md  pyproject.toml
services/mineru/examples/: adapt_gold_corpus.py  generate_token.py  run_service_smoke.py  smoke_client.py  validate_result.py  verify_windows_autostart.ps1  verify_windows_install.ps1  verify_windows_lifecycle.ps1
services/mineru/schemas/v1/: error.schema.json  health.schema.json  job-result.schema.json  job-status.schema.json
services/mineru/scripts/: install-windows.ps1  manage-windows-task.ps1  package-windows-release.ps1  startup-windows.ps1  uninstall-windows.ps1  update-windows.ps1
services/mineru/src/paperlens_mineru/: __init__.py  api.py  auth.py  cli.py  config.py  contracts.py  diagnostics.py  errors.py  jobs.py  lifecycle.py  normalizer.py  processes.py  updates.py  upstream.py
services/mineru/tests/: __init__.py  test_api.py  test_auth.py  test_cli.py  test_config.py  test_contracts.py  test_diagnostics.py  test_jobs.py  test_lifecycle.py  test_normalizer.py  test_processes.py  test_updates.py  test_upstream.py  test_windows_install.py  test_windows_task.py  test_windows_update.py
services/mineru/tests/fixtures/: job-result.valid.json  job-result.zero-display.json
src/: globals.d.ts
src/llm/: protocol.ts  (+4 more)
(+94 files in other folders)
